# motu_osc_bridge

./: .gitignore  .pylintrc  Makefile  README.md  browse  pytest.ini  requirements-dev.txt  requirements.txt  run
.github/: FUNDING.yml  release-drafter.yml
.github/workflows/: publish-to-pypi-test.yml  publish-to-pypi.yml  release-publish.yml  run-tests.yml
src/: LICENSE  README.md  pyproject.toml  setup.cfg
src/package/motu_osc_bridge/: app.py  datastore_client.py  server.py
src/tests/unit/: test_server.py
